syntax = "proto3";
option optimize_for = SPEED; // 加快解析
option java_package = "com.demo.netty.demo.rpc.protocol.protobuf"; //指定生成到哪个包下
option java_outer_classname = "MessagePOJO"; // 外部类名, 文件名

//protobuf 可以使用 message 管理其他的 message
message Message {
    //定义一个枚举类型
    enum DataType {
        RequestMessage = 0; //在 proto3 要求 enum 的编号从 0 开始
        ResponseMessage = 1;
    }
    //用 data_type 来标识传的是哪一个枚举类型
    DataType data_type = 1;
    //表示每次枚举类型最多只能出现其中的一个, 节省空间
    oneof dataBody {
        RequestMessage request = 2;
        ResponseMessage response = 3;
    }
}
message RequestMessage {
    string className = 1; //接口名
    string param = 2; //参数
    string method = 3; //方法名
}

message ResponseMessage {
    string response = 1;
}

